# firedust

./: .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  mypy.ini  pyproject.toml
.devcontainer/: configure.sh  devcontainer.json
.github/workflows/: ci.yml
examples/: create_assistant.py  deploy_to_slack.py  slack.py
examples/assistant/: add_chat_history.py  async_support.py  deploy_on_slack.py  deploy_to_slack.py  load_and_use_anywhere.py  manage_memories.py  private_chats.py  quickstart.py  teach_assistant.py  update_assistant.py
src/firedust/: __init__.py  assistant.py  connect.py
src/firedust/_assistant/abilities/: base.py
src/firedust/_assistant/base/: assistant.py
src/firedust/_assistant/chat/: base.py
src/firedust/_data/: embed.py  safetycheck.py  score.py
src/firedust/_private/: _assistant.py
src/firedust/_utils/: api.py  errors.py  logging.py
src/firedust/ability/: _base.py  code.py  custom.py  math.py
src/firedust/agency/: _base.py  task.py  workflow.py
src/firedust/entrypoint/: assistant.py
src/firedust/inference/: sand.py
src/firedust/interface/: __init__.py  _base.py  chat.py  discord.py  email.py  github.py  slack.py
src/firedust/learning/: _base.py
src/firedust/memory/: _base.py
src/firedust/types/: __init__.py  api.py  assistant.py  base.py  chat.py  inference.py  interface.py  memory.py  safety.py  structured.py  tools.py
src/firedust/utilities/: api.py  errors.py
src/firedust/utils/: api.py  checks.py  errors.py  inference_input_support.py
tests/: test_assistant.py  test_chat.py  test_learning.py  test_memories.py
tests/_utils/: test_checks.py
tests/assistant/: test_abilities.py  test_assistant.py  test_chat.py  test_learning.py  test_memories.py  test_models.py  test_multimodal_chat.py
tests/data/: test_embed.py  test_safetycheck.py  test_score.py
(+25 files in other folders)
