[tool.poetry]
name = "firedust"
version = "0.1.0"
description = ""
authors = ["Ion Tapordei <ion.tapordei@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10, <3.13"
mypy = "^1.8.0"
pydantic = "^2.5.3"
httpx = "^0.26.0"
black = "^23.12.1"
click = "^8.1.7"


[tool.poetry.group.dev.dependencies]
types-requests = "^2.31.0.20240106"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
