[tool.poetry]
name = "firedust"
version = "0.1.0"
description = "A simple framework to build and deploy AI Assistants."
authors = ["Ion Tapordei <ion.tapordei@gmail.com>"]
readme = "README.md"
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.10, <3.13"
pydantic = "^2.5.3"
httpx = "^0.26.0"

[tool.poetry.dev-dependencies]
pytest = "^7.3.1"
black = "^23.12.1"
mypy = "^1.8.0"
pre-commit = "^3.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py310']
