[tool.poetry]
name = "firedust"
version = "0.0.38"
description = "A simple framework to build and deploy AI tools."
authors = ["ion <firedvst@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10, <3.13"
pydantic = "^2.5.3"
httpx = "^0.26.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
pytest-asyncio = "^0.23.7"
black = "^24.3.0"
mypy = "^1.8.0"
ruff = "^0.3.5"
isort = "^5.13.2"
pre-commit = "^3.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py310']

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 88